--- a/index.html
+++ b/index.html
@@ -19,17 +19,29 @@
                     <img src="postagem3.jpg" alt="ilustração de html code">
                 </header>
                 <p>
-                    O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão.<a href="https://www.linkedin.com/" target="_blank">O Lorem Ipsum</a>  tem vindo a ser o texto
-                    <br> padrão usado por estas indústrias desde o ano de 1500, quando uma misturou os caracteres de um texto para criar<br>
-                     um <a href="mailto:jose@gmail.com">espécime de livro</a> . Este texto não só sobreviveu 5 séculos, mas também o salto para a tipografia electrónica ,<br> 
-                     mantendo-se essencialmente inalterada. Foi popularizada nos anos 60 com a disponibilização das folhas de <br> 
-                    Letraset, que continham passagens com Lorem Ipsum, e mais recentemente com os programas de publicação<br> 
-                    como o Aldus PageMaker que incluem versões do Lorem Ipsum.
+                    O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão.<a href="https://www.linkedin.com/" target="_blank">O Lorem Ipsum</a>  tem vindo a ser o texto padrão <br>
+                    usado por estas indústrias desde o ano de 1500, quando uma misturou os caracteres de um texto para criar um <a href="mailto:jose@gmail.com">espécime<br> 
+                        de livro</a> . Este texto não só sobreviveu 5 séculos, mas também o salto para a tipografia electrónica , mantendo-se<br>  
+                        essencialmente inalterada. Foi popularizada nos anos 60 com a disponibilização das folhas de Letraset, que continham
+                        <br> passagens com Lorem Ipsum, e mais recentemente com os programas de publicação como o Aldus PageMaker 
+                        <br> que incluem versões do Lorem Ipsum.
                 
                 </p>
             </article>
         </section>
-        <footer></footer>
+        <footer>
+            <ul> 
+                <li>
+                <a href="mailto:eduardo@machado.com">email</a>
+               </li>
+               <li>
+                <a href="https://www.linkedin.com/in/eduardo-mach/" target="_blank">Linkedin</a>
+               </li>
+               <li>
+                <a href="https://github.com/machadoDevEduardo/Primeiro-projeto" target="_blank">Github</a>
+               </li>
+            </ul>
+        </footer>
         
     </body>
 
